--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -13,10 +13,9 @@
                           media: 'all',
                           'data-turbolinks-track': true) %>
 
-  <%= javascript_pack_tag('vendor-bundle', 'data-turbolinks-track': true) %>
-
-  <!--  NOTE: Must set vendor-bundle to async false, as it must load before app-bundle  -->
-  <%= javascript_pack_tag('app-bundle', 'data-turbolinks-track': true, async: true) %>
+  <!--  NOTE: Must use defer and not async to keep async scripts loading in correct order  -->
+  <%= javascript_pack_tag('vendor-bundle', 'data-turbolinks-track': true, defer: true) %>
+  <%= javascript_pack_tag('app-bundle', 'data-turbolinks-track': true, defer: true) %>
 
   <%= csrf_meta_tags %>
 </head>
