Add serializer md5 to cache keys (#60)
* Add serializer md5 to cache keys
* serializer_globs added to the configuration file
* doc changes

--- a/react_on_rails_pro/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/pages/server_side_redux_app_cached.html.erb
@@ -1,6 +1,7 @@
 <!-- print statements to show when server rendering is happening -->
-<%= cached_react_component("ReduxApp", cache_key: "A", prerender: true, trace: true, id: "ReduxApp-react-component-0") do
-   calc_app_props_server_render
+<%= cached_react_component("ReduxApp", cache_key: "A", prerender: true,
+                           trace: true, id: "ReduxApp-react-component-0") do
+   calc_slow_app_props_server_render
 end %>
 
 <hr/>
@@ -40,7 +41,5 @@ Note the cache block.
       calling slow calc_app_props_server_render
       XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
     </pre>
-  </li>
-  <li>
   </li>
 </ol>
