More efficient calculation of the request digest (#64)
* Previously, we would do a regexp replace to filter out the dom node id
because if was randomized
* React on Rails 11.1.x provides a default to say not to randomize

--- a/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
@@ -1,5 +1,8 @@
 <ul>
   <li>
+    <%= link_to "Home", root_path %>
+  </li>
+  <li>
     <%= link_to "cached_react_component example", server_side_redux_app_cached_path %>
   </li>
   <li>
