--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -1,5 +1,8 @@
 <ul>
   <li>
+    <%= link_to "Home", root_path %>
+  </li>
+  <li>
     <%= link_to "cached_react_component example", server_side_redux_app_cached_path %>
   </li>
   <li>
