--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -92,5 +92,8 @@
   <li>
     <%= link_to "Server Render With Timout", server_render_with_timeout_path %>
   </li>
+  <li>
+    <%= link_to "Hook based component", component_with_hook_path %>
+  </li>
 </ul>
 <hr/>
