--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -9,12 +9,12 @@
 
   <%= yield :head %>
 
-  <%#= stylesheet_pack_tag('clientRegistration',
+  <%= stylesheet_pack_tag('main',
                           media: 'all',
                           'data-turbolinks-track': true) %>
 
   <!--  NOTE: Must use defer and not async to keep async scripts loading in correct order  -->
-  <%= javascript_packs_with_chunks_tag('clientReg', 'data-turbolinks-track': true, defer: true) %>
+  <%= javascript_packs_with_chunks_tag('clientRegistration', 'data-turbolinks-track': true, defer: true) %>
 
   <%= csrf_meta_tags %>
 </head>
