server-bundle is configured, still has problems with babel config and defninitions, require is not defnined

--- a/spec/dummy/app/views/layouts/application.html.erb
+++ b/spec/dummy/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <%= yield :head %>
 
-  <%= stylesheet_pack_tag('main',
+  <%= stylesheet_pack_tag('clientRegistration',
                           media: 'all',
                           'data-turbolinks-track': true) %>
 
