Major change to fix issues with React Hooks

--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -1,5 +1,8 @@
 <ul>
   <li>
+    <%= link_to "One Page with Many Examples at Once", root_path %>
+  </li>
+  <li>
     <%= link_to "Hello World Component Client Rendered", client_side_hello_world_path %>
   </li>
   <li>
@@ -30,6 +33,9 @@
     <%= link_to "Hello World Component Server Rendered", server_side_hello_world_path %>
   </li>
   <li>
+    <%= link_to "Hello World Component Server Rendered Hooks", server_side_hello_world_hooks_path %>
+  </li>
+  <li>
     <%= link_to "Hello World Component Server Rendered, with extra options", server_side_hello_world_with_options_path %>
   </li>
   <li>
@@ -58,9 +64,6 @@
   </li>
   <li>
     <%= link_to "XHR Refresh", xhr_refresh_path %>
-  </li>
-  <li>
-    <%= link_to "One Page with Many Examples at Once", root_path %>
   </li>
   <li>
     <%= link_to "Manually Rendered Component", client_side_manual_render_path %>
