--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -95,5 +95,11 @@
   <li>
     <%= link_to "Server Render With Timout", server_render_with_timeout_path %>
   </li>
+  <li>
+    <%= link_to "Incorrectly returning JSX rather than function", context_function_return_jsx_path %>
+  </li>
+  <li>
+    <%= link_to "Incorrectly wrapping a pure component in a function", pure_component_wrapped_in_function_path %>
+  </li>
 </ul>
 <hr/>
