Before renaming generatorFunction to reactComponent
After this commit, going to change the logic to reverse
the check for reactComponent vs. Generator function

--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -90,6 +90,9 @@
     <%= link_to "Generator function returns object with renderedHtml as another object (react-helmet)", react_helmet_path %>
   </li>
   <li>
+    <%= link_to "Improperly defined generator function (react-helmet)", react_helmet_broken_path %>
+  </li>
+  <li>
     <%= link_to "Image Example", image_example_path %>
   </li>
   <li>
