--- a/spec/dummy/app/views/pages/react_helmet_broken.erb
+++ b/spec/dummy/app/views/pages/react_helmet_broken.erb
@@ -13,9 +13,9 @@
 
 <hr/>
 
-This page demonstrates an improperly defined generator function.
+This page demonstrates an improperly defined render function.
 
-<H2>Here's the error message when you forget to mark the function as a generator function:</H2>
+<H2>Here's the error message when you forget to mark the function as a render function:</H2>
 
 <pre>
   Objects are not valid as a React child (found: object with keys {renderedHtml}). If you meant to render a collection of children, use an array instead.\n    in Unknown
