--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -3,6 +3,9 @@
     <%= link_to "One Page with Many Examples at Once", root_path %>
   </li>
   <li>
+    <%= link_to "Hello World Component Server Rendered Hooks", server_side_hello_world_hooks_path %>
+  </li>
+  <li>
     <%= link_to "Hello World Component Client Rendered", client_side_hello_world_path %>
   </li>
   <li>
@@ -33,19 +36,16 @@
     <%= link_to "Hello World Component Server Rendered", server_side_hello_world_path %>
   </li>
   <li>
-    <%= link_to "Hello World Component Server Rendered Hooks", server_side_hello_world_hooks_path %>
-  </li>
-  <li>
     <%= link_to "Hello World Component Server Rendered, with extra options", server_side_hello_world_with_options_path %>
   </li>
   <li>
     <%= link_to "Hello World Component Server Rendered ES5", server_side_hello_world_es5_path %>
   </li>
   <li>
-    <%= link_to "Redux App Server Rendered (Generator Function)", server_side_redux_app_path %>
+    <%= link_to "Redux App Server Rendered (render function)", server_side_redux_app_path %>
   </li>
   <li>
-    <%= link_to "Redux App Server Rendered (Generator Function) With Fragment Caching", server_side_redux_app_cached_path %>
+    <%= link_to "Redux App Server Rendered (render function) With Fragment Caching", server_side_redux_app_cached_path %>
   </li>
   <li>
     <%= link_to "Client Logging and Throw Error Handling", client_side_log_throw_path %>
@@ -84,13 +84,13 @@
     <%= link_to "Turbolinks Cache Disabled Example", turbolinks_cache_disabled_path %>
   </li>
   <li>
-    <%= link_to "Generator function returns object with renderedHtml", rendered_html_path %>
+    <%= link_to "render function returns object with renderedHtml", rendered_html_path %>
   </li>
   <li>
-    <%= link_to "Generator function returns object with renderedHtml as another object (react-helmet)", react_helmet_path %>
+    <%= link_to "render function returns object with renderedHtml as another object (react-helmet)", react_helmet_path %>
   </li>
   <li>
-    <%= link_to "Improperly defined generator function (react-helmet)", react_helmet_broken_path %>
+    <%= link_to "Improperly defined render function (react-helmet)", react_helmet_broken_path %>
   </li>
   <li>
     <%= link_to "Image Example", image_example_path %>
