Add loadable-components example (#158)
add loadable-components example to spec/dummy

--- a/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
@@ -78,6 +78,9 @@
     <%= link_to "Pure Component", pure_component_path %>
   </li>
   <li>
+    <%= link_to "Loadable Component", loadable_component_path %>
+  </li>
+  <li>
     <%= link_to "CSS Modules Images Fonts Example", css_modules_images_fonts_example_path %>
   </li>
   <li>
