--- a/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
@@ -1,9 +1,31 @@
+<h1>
+  React on Rails Pro Examples
+</h1>
+<h2>
+  Specific to React on Rails Pro
+</h2>
+<ul>
+  <li>
+    <%= link_to "Caching: simple cached_react_component", server_side_redux_app_cached_path %>
+  </li>
+  <li>
+    <%= link_to "Caching: Generator function returns object with renderedHtml", cached_react_helmet_path %>
+  </li>
+  <li>
+    <%= link_to "Loadable Component", loadable_component_path %>
+  </li>
+  <li>
+    <%= link_to "Server Render With Timeout (not currently working)", server_render_with_timeout_path %>
+  </li>
+</ul>
+<hr/>
+<hr/>
+<h2>
+  Other examples, matching those for the basic react_on_rails/spec_dummy
+</h2>
 <ul>
   <li>
     <%= link_to "Home", root_path %>
-  </li>
-  <li>
-    <%= link_to "cached_react_component example", server_side_redux_app_cached_path %>
   </li>
   <li>
     <%= link_to("Shared Redux Store", shared_redux_store_path) %>
@@ -78,9 +100,6 @@
     <%= link_to "Pure Component", pure_component_path %>
   </li>
   <li>
-    <%= link_to "Loadable Component", loadable_component_path %>
-  </li>
-  <li>
     <%= link_to "CSS Modules Images Fonts Example", css_modules_images_fonts_example_path %>
   </li>
   <li>
@@ -90,13 +109,7 @@
     <%= link_to "Generator function returns object with renderedHtml", rendered_html_path %>
   </li>
   <li>
-    <%= link_to "Generator function returns object with renderedHtml as another object", react_helmet_path %>
-  </li>
-  <li>
     <%= link_to "Image Example", image_example_path %>
-  </li>
-  <li>
-    <%= link_to "Server Render With Timout", server_render_with_timeout_path %>
   </li>
 </ul>
 <hr/>
