--- a/spec/dummy/app/views/pages/server_side_hello_world_shared_store_controller.html.erb
+++ b/spec/dummy/app/views/pages/server_side_hello_world_shared_store_controller.html.erb
@@ -35,10 +35,10 @@ redux_store("SharedReduxStore", props: @app_props_server_render)
     Place the components: spec/dummy/app/views/pages/server_side_hello_world_shared_store_controller.html.erb
     <br/>
     <pre>
-<%%= react_component("ReduxSharedStoreApp", prerender: false, trace: true, id: "ReduxSharedStoreApp-react-component-0") %>
+<%%= react_component("ReduxSharedStoreApp", prerender: true, trace: true, id: "ReduxSharedStoreApp-react-component-0") %>
 
 Second Hello World
-<%%= react_component("ReduxSharedStoreApp", prerender: false, trace: true, id: "ReduxSharedStoreApp-react-component-1") %>
+<%%= react_component("ReduxSharedStoreApp", prerender: true, trace: true, id: "ReduxSharedStoreApp-react-component-1") %>
     </pre>
   </li>
 </ol>
