--- a/spec/dummy/app/views/pages/server_side_hello_world.html.erb
+++ b/spec/dummy/app/views/pages/server_side_hello_world.html.erb
@@ -6,7 +6,7 @@
 <p>
   This example demonstrates server side rendering. The only difference from client rendering is that
   the <code>prerender</code> option is true.<br/><br/>
-  The source HTML of this page will only show a DIV with an ID matching HelloWorld.<br/>
+  The source HTML of this page will only show a DIV with server rendering tags.<br/>
   <pre>
     <%= '<div id="HelloWorld-react-component-0"><div data-reactid=".uwwa3eq70g" data-react-checksum="-1318287018">' %>
     <%= '<h3 data-reactid=".uwwa3eq70g.0"><span data-reactid=".uwwa3eq70g.0.0">Hello, </span><span data-reactid=".uwwa3eq70g.0.1">' %>
@@ -44,7 +44,7 @@
   </li>
   <li>
     Expose the HelloWorld Component on the client side:
-    spec/dummy/client/app/startup/clientRegistration.jsx
+    spec/dummy/client/app/packs/client-bundle.js
     <br/>
     <pre>
       import HelloWorld from '../components/HelloWorld';
@@ -54,7 +54,7 @@
   </li>
   <li>
     Expose the HelloWorld Component on the server side:
-    spec/dummy/client/app/startup/serverRegistration.jsx
+    spec/dummy/client/app/packs/server-bundle.js
     <br/>
     <pre>
     import HelloWorld from '../components/HelloWorld';
