--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -17,6 +17,9 @@
   <li>
     <%= link_to "Server Render With Timeout (not currently working)", server_render_with_timeout_path %>
   </li>
+  <li>
+    <%= link_to("Fragment Caching with Redux", cached_redux_component_path) %>
+  </li>
 </ul>
 <hr/>
 <hr/>
@@ -25,13 +28,10 @@
 </h2>
 <ul>
   <li>
-    <%= link_to "Home", root_path %>
+    <%= link_to "One Page with Many Examples at Once", root_path %>
   </li>
   <li>
-    <%= link_to("Shared Redux Store", shared_redux_store_path) %>
-  </li>
-  <li>
-    <%= link_to("Component with Lodash", component_with_lodash_path) %>
+    <%= link_to "Hello World Component Server Rendered Hooks", server_side_hello_world_hooks_path %>
   </li>
   <li>
     <%= link_to "Hello World Component Client Rendered", client_side_hello_world_path %>
@@ -70,7 +70,10 @@
     <%= link_to "Hello World Component Server Rendered ES5", server_side_hello_world_es5_path %>
   </li>
   <li>
-    <%= link_to "Redux App Server Rendered (Generator Function)", server_side_redux_app_path %>
+    <%= link_to "Redux App Server Rendered (Render-Function)", server_side_redux_app_path %>
+  </li>
+  <li>
+    <%= link_to "Redux App Server Rendered (Render-Function) With Fragment Caching", server_side_redux_app_cached_path %>
   </li>
   <li>
     <%= link_to "Client Logging and Throw Error Handling", client_side_log_throw_path %>
@@ -88,7 +91,7 @@
     <%= link_to "render_js only example", render_js_path %>
   </li>
   <li>
-    <%= link_to "One Page with Many Examples at Once", root_path %>
+    <%= link_to "XHR Refresh", xhr_refresh_path %>
   </li>
   <li>
     <%= link_to "Manually Rendered Component", client_side_manual_render_path %>
@@ -106,10 +109,25 @@
     <%= link_to "Turbolinks Cache Disabled Example", turbolinks_cache_disabled_path %>
   </li>
   <li>
-    <%= link_to "Generator function returns object with renderedHtml", rendered_html_path %>
+    <%= link_to "Render-Function returns object with renderedHtml", rendered_html_path %>
+  </li>
+  <li>
+    <%= link_to "Render-Function returns object with renderedHtml as another object (react-helmet)", react_helmet_path %>
+  </li>
+  <li>
+    <%= link_to "Improperly defined Render-Function (react-helmet)", react_helmet_broken_path %>
   </li>
   <li>
     <%= link_to "Image Example", image_example_path %>
+  </li>
+  <li>
+    <%= link_to "Server Render With Timout", server_render_with_timeout_path %>
+  </li>
+  <li>
+    <%= link_to "Incorrectly returning React Element (JSX) rather than React Function Component", context_function_return_jsx_path %>
+  </li>
+  <li>
+    <%= link_to "Incorrectly wrapping a pure component in a function", pure_component_wrapped_in_function_path %>
   </li>
 </ul>
 <hr/>
