Enable node rendered components to return promises (#210)
* enable component render functions to return promises

* move "server render with timeout" view to pro only

* add rendering_returns_promises & include_execjs_polyfills configuration options

* update CI: create api request during server rendering

* update to RoR 2.4.0

--- a/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/shared/_header.erb
@@ -15,13 +15,12 @@
     <%= link_to "Loadable Component", loadable_component_path %>
   </li>
   <li>
-    <%= link_to "Server Render With Timeout (not currently working)", server_render_with_timeout_path %>
+    <%= link_to "Server Render With Timeout", server_render_with_timeout_path %>
   </li>
   <li>
     <%= link_to("Fragment Caching with Redux", cached_redux_component_path) %>
   </li>
 </ul>
-<hr/>
 <hr/>
 <h2>
   Other examples, matching those for the basic react_on_rails/spec_dummy
