--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -15,13 +15,12 @@
     <%= link_to "Loadable Component", loadable_component_path %>
   </li>
   <li>
-    <%= link_to "Server Render With Timeout (not currently working)", server_render_with_timeout_path %>
+    <%= link_to "Server Render With Timeout", server_render_with_timeout_path %>
   </li>
   <li>
     <%= link_to("Fragment Caching with Redux", cached_redux_component_path) %>
   </li>
 </ul>
-<hr/>
 <hr/>
 <h2>
   Other examples, matching those for the basic react_on_rails/spec_dummy
