Remove Reason file, Replace Reason occurrences by ReScript

--- a/spec/dummy/app/views/shared/_header.erb
+++ b/spec/dummy/app/views/shared/_header.erb
@@ -9,7 +9,7 @@
     <%= link_to "Hello World Component Client Rendered", client_side_hello_world_path %>
   </li>
   <li>
-    <%= link_to "Hello World Reason Component Client Rendered", client_side_reason_hello_world_path %>
+    <%= link_to "Hello World ReScript Component Client Rendered", client_side_rescript_hello_world_path %>
   </li>
   <li>
     <%= link_to "Hello World Shared Redux Components Client Rendered",
