Add template to add documentation reference

--- a/lib/generators/react_on_rails/templates/base/base/config/webpack/development.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/config/webpack/development.js.tt
@@ -1,5 +1,4 @@
-// The source code including full typescript support is available at:
-// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/config/webpack/development.js
+<%= add_documentation_reference(config[:message], "// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/config/webpack/development.js") %>
 
 process.env.NODE_ENV = process.env.NODE_ENV || 'development';
 
