--- a/lib/generators/react_on_rails/templates/base/base/babel.config.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/babel.config.js.tt
@@ -1,5 +1,4 @@
-// The source code including full typescript support is available at:
-// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/babel.config.js
+<%= add_documentation_reference(config[:message], "// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/babel.config.js") %>
 
 const defaultConfigFunc = require('@rails/webpacker/package/babel/preset.js');
 
