--- a/lib/generators/react_on_rails/templates/base/base/config/webpack/production.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/config/webpack/production.js.tt
@@ -1,5 +1,4 @@
-// The source can be found at:
-// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/config/webpack/production.js
+<%= add_documentation_reference(config[:message], "// https://github.com/shakacode/react_on_rails_tutorial_with_ssr_and_hmr_fast_refresh/blob/master/config/webpack/production.js") %>
 
 process.env.NODE_ENV = process.env.NODE_ENV || 'production';
 
