--- a/lib/generators/react_on_rails/templates/base/base/config/webpack/development.js.tt
+++ b/lib/generators/react_on_rails/templates/base/base/config/webpack/development.js.tt
@@ -7,13 +7,10 @@ const { devServer, inliningCss } = require('@rails/webpacker');
 const webpackConfig = require('./webpackConfig');
 
 const developmentEnvOnly = (clientWebpackConfig, _serverWebpackConfig) => {
-  // eslint-disable-next-line no-unused-vars
-  const isWebpackDevServer = process.env.WEBPACK_DEV_SERVER;
-
   // plugins
   if (inliningCss) {
     // Note, when this is run, we're building the server and client bundles in separate processes.
-    // Thus, this plugin is not applied.
+    // Thus, this plugin is not applied to the server bundle.
 
     // eslint-disable-next-line global-require
     const ReactRefreshWebpackPlugin = require('@pmmmwh/react-refresh-webpack-plugin');
@@ -26,4 +23,5 @@ const developmentEnvOnly = (clientWebpackConfig, _serverWebpackConfig) => {
     );
   }
 };
+
 module.exports = webpackConfig(developmentEnvOnly);
