--- a/react_on_rails_pro/spec/dummy/app/views/layouts/application.html.erb
+++ b/react_on_rails_pro/spec/dummy/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
                           'data-turbolinks-track': true) %>
 
   <!--  NOTE: Must use defer and not async to keep async scripts loading in correct order  -->
-  <%= javascript_packs_with_chunks_tag('client-bundle', 'data-turbolinks-track': true, defer: true) %>
+  <%= javascript_pack_tag('client-bundle', 'data-turbolinks-track': true, defer: true) %>
 
   <%= csrf_meta_tags %>
 </head>
