--- a/react_on_rails_pro/spec/dummy/client/app/components/CssModulesImagesFontsExample.module.scss
+++ b/react_on_rails_pro/spec/dummy/client/app/components/CssModulesImagesFontsExample.module.scss
@@ -1,5 +1,6 @@
 // Test out a custom font
 
+@use "sass:math";
 
 // TODO: Figure out how to get this in a global spot
 $font-family-sans-serif: 'OpenSans-Light';  // apply custom font
@@ -31,9 +32,9 @@ $last-call-height: 373px;
 .lastCall {
   display: inline-block;
   background: $last-call-svg;
-  background-size: $last-call-width/2 $last-call-height/2;
-  width: $last-call-width/2;
-  height: $last-call-height/2;
+  background-size: math.div($last-call-width, 2) math.div($last-call-height, 2);
+  width: math.div($last-call-width, 2);
+  height: math.div($last-call-height, 2);
 }
 
 // This is an absolute path to the image, defined in app-variables.scss
